feat: completed the html page and uploaded the images

--- a/index.html
+++ b/index.html
@@ -8,47 +8,104 @@
 </head>
 
 <body>
-    <header>
-        <h1>
-
+    <header id="header">
+        <h1 id="header-logo">
+            <img src="img/logo.svg" alt="logo-Booleaner">
         </h1>
     </header>
 
     <section>
-        <h2></h2>
-        <div>
-            <p></p>
-            <p></p>
+        <h2> Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h2>
+        <div id="subscript-title">
+            <p>Scitto da <strong>The Booleaner</strong></p>
+            <p>il 10/10/2020</p>
         </div>
 
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
+        <div id="photo">
+            <img src="img/tim-1.jpg" alt="tim-1">
+            <img src="img/tim-2.jpg" alt="tim-2">
         </div>
 
-        <div>
-            <p></p>
-            <p></p>
+        <div id="description-photo">
+            <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+            <p>2nd Photo: Wikimedia, by Paul Clarke</p>
         </div>
 
-        <p></p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur.<em> Excepteur sint occaecat cupidatat non proident, </em> sunt
+            in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
 
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</li>
+            <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</li>
+            <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</li>
         </ul>
     </section>
 
     <section>
-        <table></table>
-        <p></p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                        ea commodo consequat.</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                        ea commodo consequat.</td>
+                </tr>
+
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                        ea commodo consequat.</td>
+                </tr>
+            </tbody>
+
+        </table>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. </em> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+            deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+        </p>
     </section>
 
     <footer>
-        <h4></h4>
-        <img src="" alt="">
-        <img src="" alt="">
+        <h4>Potrebbero interessarti</h4>
+        <p id="monitor">Lorem ipsum dolor</p>
+        <p id="pattern">Lorem ipsum dolor</p>
     </footer>
 </body>
 
