feat: updated style.css and index.css

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 </head>
 
 <body>
-    <header id="header">
-        <h1 id="header-logo">
-            <img src="img/logo.svg" alt="logo-Booleaner">
-        </h1>
+    <header>
+        <div id:"header-logo">
+            <h1>
+                <img src="img/logo.svg" alt="logo-Booleaner">
+            </h1>
+        </div>
     </header>
 
     <section>
         <h2> Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h2>
-        <div id="subscript-title">
-            <p>Scitto da <strong>The Booleaner</strong></p>
-            <p>il 10/10/2020</p>
+        <p class="subscript-author">Scitto da <a href="www.google.com" class="autore">The Booleaner</a></p>
+        <p class="subscript-date">il 10/10/2020</p>
+
+        <div>
+            <img src="img/tim-1.jpg" alt="tim-1" class="photo">
+            <img src="img/tim-2.jpg" alt="tim-2" class="photo">
         </div>
 
-        <div id="photo">
-            <img src="img/tim-1.jpg" alt="tim-1">
-            <img src="img/tim-2.jpg" alt="tim-2">
-        </div>
-
-        <div id="description-photo">
-            <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
-            <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+        <div>
+            <p class="description-photo">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+            <p class="description-photo">2nd Photo: Wikimedia, by Paul Clarke</p>
         </div>
 
         <p>
@@ -58,33 +58,39 @@
     <section>
         <table>
             <thead>
-                <tr>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
+                <tr class="blue-table">
+                    <th class="item">Lorem ipsum dolor</th>
+                    <th class="item">Lorem ipsum dolor</th>
+                    <th class="description">Lorem ipsum dolor</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr class="sky-table">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
-                    <td> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    <td> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex
                         ea commodo consequat.</td>
                 </tr>
                 <tr>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
-                    <td> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    <td> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex
                         ea commodo consequat.</td>
                 </tr>
 
-                <tr>
+                <tr class="sky-table">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
-                    <td> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    <td> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex
                         ea commodo consequat.</td>
                 </tr>
             </tbody>
@@ -106,8 +112,10 @@
 
     <footer>
         <h4>Potrebbero interessarti</h4>
-        <p id="monitor">Lorem ipsum dolor</p>
-        <p id="pattern">Lorem ipsum dolor</p>
+        <div id="container-photo-footer">
+            <p id="monitor">Lorem ipsum dolor</p>
+            <p id="graph">Lorem ipsum dolor</p>
+        </div>
     </footer>
 </body>
 
