feat: Improved CSS with additional details

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div id:"header-logo">
+        <div id="logo">
             <h1>
                 <img src="img/logo.svg" alt="logo-Booleaner">
             </h1>
@@ -23,7 +23,7 @@
         <p class="subscript-author">Scitto da <a href="www.google.com" class="autore">The Booleaner</a></p>
         <p class="subscript-date">il 10/10/2020</p>
 
-        <div>
+        <div id="photo-container">
             <img src="img/tim-1.jpg" alt="tim-1" class="photo">
             <img src="img/tim-2.jpg" alt="tim-2" class="photo">
         </div>
